--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.thomsonreuters.cdb.vessel</groupId>
-  <artifactId>AnalysisOnNewSource</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <description>Analysis on new vessel data provider</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.thomsonreuters.cdb.vessel</groupId>
+	<artifactId>AnalysisOnNewSource</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<description>Analysis on new vessel data provider</description>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.1</version>
+		</dependency>
+	</dependencies>
 </project>
